all: replace x-user[-id] with x-tenant as model namespace key
